objects/JBCXM__ScoringScheme__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__CustomerScheme__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This used to specify whether you use the scheme for the customer overall health calculation or not</description>
        <label>Customer Scheme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__From__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is used to specify whether the scoring scheme is active or inactive</description>
        <label>Is enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__SystemDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to specify whether the Scoring scheme is created by user or default with application.</description>
        <label>System Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__To__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <description>This is used to represent the scheme type. For Example Grade, Score, Color, ....</description>
        <label>Scheme Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Scorecard Scoring Scheme</label>
    <nameField>
        <label>Scoring Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Scoring Scheme</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>